--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.2.3'
 	id 'io.spring.dependency-management' version '1.1.4'
+	id 'com.google.protobuf' version '0.9.4'
+
 }
 
 group = 'com.hospitalserver'
@@ -13,6 +15,7 @@ java {
 
 repositories {
 	mavenCentral()
+	google()
 }
 
 ext {
@@ -20,6 +23,11 @@ ext {
 }
 
 dependencies {
+	// https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java
+	implementation group: 'com.google.protobuf', name: 'protobuf-java', version: '3.25.3'
+	// https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java-util
+	implementation group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.25.3'
+
 	implementation 'com.h2database:h2'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 //	implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -39,3 +47,4 @@ dependencyManagement {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
