--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,8 @@ services:
     build:
       context: "."
       dockerfile: Dockerfile
-    working_dir: /app/
+    working_dir: /app/src/
+    ports:
+      - "8081:8080"
     volumes:
-      - .:/app/
+      - ./src/:/app/src/
