--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,8 +4,7 @@ services:
     build:
       context: "."
       dockerfile: Dockerfile
-    working_dir: /app/src/
     ports:
       - "8081:8080"
     volumes:
-      - ./src/:/app/src/
+      - ./src/main:/app/src/main
