--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,24 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# FABRIC GATEWAY PROPERTIES
+# Is needed to instantiate the correct bean, depending on whether it is main or test environment
+gateway.mock=false
+# ID of the Membership Service Provider (see https://hyperledger-fabric.readthedocs.io/en/latest/membership/membership.html)
+gateway.msp-id=${MSP_ID:MedTechChainPeerMSP}
+# Path to crypto materials.
+gateway.crypto-path=${CRYPTO_PATH:../dev-tools/fabric/.generated/crypto/peerOrganizations/medtechchain.nl}
+# Path to user certificate.
+gateway.cert-dir-path=${CERT_DIR_PATH:users/User1@medtechchain.nl/msp/signcerts}
+# Path to user private key directory.
+gateway.key-dir-path=${KEY_DIR_PATH:users/User1@medtechchain.nl/msp/keystore}
+# Path to peer tls certificate.
+gateway.tls-cert-path=${TLS_CERT_PATH:users/User1@medtechchain.nl/tls/ca.crt}
+# Gateway peer end point.
+gateway.peer-endpoint=${PEER_ENDPOINT:localhost:10051}
+gateway.override-auth=${OVERRIDE_AUTH:peer0.medtechchain.nl}
+#--------------------------------------------------------------
+gateway.channel-name=${CHANNEL_NAME:medtechchain}
+gateway.chaincode-name=${CHAINCODE_NAME:medtechchain}
+gateway.smart-contract-name=${SMART_CONTRACT_NAME:medtechchain}
