--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,3 @@
-hospital.name = Hospital Name
-#debug = true
-
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -11,19 +8,19 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # Is needed to instantiate the correct bean, depending on whether it is main or test environment
 gateway.mock=false
 # ID of the Membership Service Provider (see https://hyperledger-fabric.readthedocs.io/en/latest/membership/membership.html)
-gateway.msp-id=${MSP_ID:MedTechChainPeerMSP}
+gateway.msp-id=${MSP_ID}
 # Path to crypto materials.
-gateway.crypto-path=${CRYPTO_PATH:../dev-tools/fabric/.generated/crypto/peerOrganizations/medtechchain.nl}
+gateway.crypto-path=${CRYPTO_PATH}
 # Path to user certificate.
-gateway.cert-dir-path=${CERT_DIR_PATH:users/User1@medtechchain.nl/msp/signcerts}
+gateway.cert-dir-path=${CERT_DIR_PATH}
 # Path to user private key directory.
-gateway.key-dir-path=${KEY_DIR_PATH:users/User1@medtechchain.nl/msp/keystore}
+gateway.key-dir-path=${KEY_DIR_PATH}
 # Path to peer tls certificate.
-gateway.tls-cert-path=${TLS_CERT_PATH:users/User1@medtechchain.nl/tls/ca.crt}
+gateway.tls-cert-path=${TLS_CERT_PATH}
 # Gateway peer end point.
-gateway.peer-endpoint=${PEER_ENDPOINT:localhost:10051}
-gateway.override-auth=${OVERRIDE_AUTH:peer0.medtechchain.nl}
+gateway.peer-endpoint=${PEER_ENDPOINT}
+gateway.override-auth=${OVERRIDE_AUTH}
 #--------------------------------------------------------------
-gateway.channel-name=${CHANNEL_NAME:medtechchain}
-gateway.chaincode-name=${CHAINCODE_NAME:medtechchain}
-gateway.smart-contract-name=${SMART_CONTRACT_NAME:medtechchain}
+gateway.channel-name=${CHANNEL_NAME}
+gateway.chaincode-name=${CHAINCODE_NAME}
+gateway.smart-contract-name=${SMART_CONTRACT_NAME}
