Containerize (including build)

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,78 @@
-version: "3.8"
 services:
-  hospital-api:
-    build:
-      context: "."
+  medivale-hpt: &hospital
+    build: &build
+      context: .
       dockerfile: Dockerfile
+      args:
+        HOSPITAL_DOMAIN: medivale.nl
+    image: medtechchain/hospital
+    container_name: hospital.medivale.nl
+    profiles:
+      - light
+      - default
+    environment: &env
+      CHANNEL_NAME: medtechchain
+      CHAINCODE_NAME: medtechchain
+      SMART_CONTRACT_NAME: medtechchain
+      CRYPTO_PATH: /crypto/medivale.nl
+      CERT_DIR_PATH: ./msp/signcerts
+      KEY_DIR_PATH: ./msp/keystore
+      TLS_CERT_PATH: ./tls/ca.crt
+      MSP_ID: MediValePeerMSP
+      OVERRIDE_AUTH: peer0.medivale.nl
+      PEER_ENDPOINT: peer0.medivale.nl:7051
     ports:
       - "8081:8080"
-    volumes:
-      - ./src/main:/app/src/main
+    networks:
+      - medivale
+
+  healpoint-hpt:
+    <<: *hospital
+    build:
+      <<: *build
+      args:
+        HOSPITAL_DOMAIN: healpoint.nl
+    container_name: hospital.healpoint.nl
+    profiles:
+      - default
+    environment:
+      <<: *env
+      CRYPTO_PATH: /crypto/healpoint.nl
+      MSP_ID: HealPointPeerMSP
+      OVERRIDE_AUTH: peer0.healpoint.nl
+      PEER_ENDPOINT: peer0.healpoint.nl:7051
+    ports:
+      - "8082:8080"
+    networks:
+      - healpoint
+
+  lifecare-hpt:
+    <<: *hospital
+    build:
+      <<: *build
+      args:
+        HOSPITAL_DOMAIN: lifecare.nl
+    container_name: hospital.lifecare.nl
+    profiles:
+      - default
+    environment:
+      <<: *env
+      CRYPTO_PATH: /crypto/lifecare.nl
+      MSP_ID: LifeCarePeerMSP
+      OVERRIDE_AUTH: peer0.lifecare.nl
+      PEER_ENDPOINT: peer0.lifecare.nl:7051
+    ports:
+      - "8083:8080"
+    networks:
+      - lifecare
+
+networks:
+  medivale:
+    external: true
+    name: medivale
+  healpoint:
+    external: true
+    name: healpoint
+  lifecare:
+    external: true
+    name: lifecare
