--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,13 @@
 #spring.datasource.password=
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+# JSON PROPERTIES
+spring.jackson.deserialization.fail-on-ignored-properties=true
+spring.jackson.deserialization.fail-on-unknown-properties=true
+spring.jackson.deserialization.fail-on-null-creator-properties=true
+spring.jackson.deserialization.fail-on-missing-creator-properties=true
+spring.jackson.mapper.accept-case-insensitive-enums=true
+
 # METADATA GENERATION
 # How many payloads we generate for metadata generation, this will be changed
 num.payloads=10
