--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.jackson.deserialization.fail-on-null-creator-properties=true
 spring.jackson.deserialization.fail-on-missing-creator-properties=true
 spring.jackson.mapper.accept-case-insensitive-enums=true
 
+hospital.name=${HOSPITAL_NAME}
+
 # FABRIC GATEWAY PROPERTIES
-# Is needed to instantiate the correct bean, depending on whether it is main or test environment
-gateway.mock=false
 # ID of the Membership Service Provider (see https://hyperledger-fabric.readthedocs.io/en/latest/membership/membership.html)
 gateway.msp-id=${MSP_ID}
 # Path to crypto materials.
@@ -24,4 +24,5 @@ gateway.override-auth=${OVERRIDE_AUTH}
 #--------------------------------------------------------------
 gateway.channel-name=${CHANNEL_NAME}
 gateway.chaincode-name=${CHAINCODE_NAME}
-gateway.smart-contract-name=${SMART_CONTRACT_NAME}
+gateway.data-contract-name=${DEVICE_DATA_CONTRACT_NAME}
+gateway.config-contract-name=${CONFIG_CONTRACT_NAME}
