--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.jackson.deserialization.fail-on-missing-creator-properties=true
 spring.jackson.mapper.accept-case-insensitive-enums=true
 
 hospital.name=${HOSPITAL_NAME}
+hospital.generation-rate=${HOSPITAL_GENERATION_RATE}
+hospital.override-ttp-address=${HOSPITAL_OVERRIDE_TTP_ADDRESS}
 
 # FABRIC GATEWAY PROPERTIES
 # ID of the Membership Service Provider (see https://hyperledger-fabric.readthedocs.io/en/latest/membership/membership.html)
